migrate to spark 3.5.1